--- a/Avantari_Qs4/app/src/main/res/layout/activity_first.xml
+++ b/Avantari_Qs4/app/src/main/res/layout/activity_first.xml
@@ -8,5 +8,5 @@
         android:id="@+id/btnNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next Scren" />
+        android:text="Next Screen" />
 </LinearLayout>
