--- a/Avantari_Qs4/app/src/main/res/layout/activity_scrolling.xml
+++ b/Avantari_Qs4/app/src/main/res/layout/activity_scrolling.xml
@@ -29,8 +29,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
+                app:contentScrim="@color/colorTransparent"
                 app:layout_scrollFlags="scroll|enterAlways">
+
+                <View
+                    android:id="@+id/vTopView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
