--- a/Avantari_Qs4/app/src/main/res/values/colors.xml
+++ b/Avantari_Qs4/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#EC5A13</color>
 
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorTransparent">#00000000</color>
 </resources>
