--- a/Avantari_Qs4/app/src/main/res/layout/activity_scrolling.xml
+++ b/Avantari_Qs4/app/src/main/res/layout/activity_scrolling.xml
@@ -37,12 +37,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/AppTheme.PopupOverlay" />
+                <!--<android.support.v7.widget.Toolbar-->
+                    <!--android:id="@+id/toolbar"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="?attr/actionBarSize"-->
+                    <!--app:layout_collapseMode="pin"-->
+                    <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->
 
                 <ImageView
                     android:id="@+id/ivBack"
