--- a/Avantari_Qs4/app/src/main/res/layout/content_scrolling.xml
+++ b/Avantari_Qs4/app/src/main/res/layout/content_scrolling.xml
@@ -37,6 +37,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rippel_orange"
+            android:clickable="true"
             android:layout_margin="@dimen/text_margin"
             android:orientation="horizontal">
 
